<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
            android:id="@+id/txtInfo"
            android:layout_width="match_parent"
            android:layout_height="335dp"
            android:layout_margin="40dp"
            android:text="@string/txtInfo"
            android:textAlignment="center" android:textSize="18sp"/>


    <EditText
        android:id="@+id/txtIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="text"
        android:hint="@string/txtMorse"
         />
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">

        <Button
            android:id="@+id/btnSendLightMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:onClick="btnSendLightMessageClick"
            android:text="@string/btnMorseL"
            />

        <Button
                android:id="@+id/btnSendSoundMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:onClick="btnSendSoundMessageClick"
                android:text="@string/btnMorseS"
        />

        <Button
                android:id="@+id/btnSendLightAndSoundMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:onClick="btnSendLightandSoundMessageClick"
                android:text="@string/btnMorseLandS"
        />
    </LinearLayout>
    <CheckBox
        android:id="@+id/chkLoop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/chkBucle"
        />

    <Button
        android:id="@+id/btnCancelMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:onClick="btnCancelClick"
        android:text="@string/btnCancelar_bucle"
        />

</LinearLayout>